--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ button {
 @media screen and (min-width: 768px) {
     .container {
         max-width: 768px;
-        padding: 0 16px;
+
     }
 }
 
@@ -392,7 +392,7 @@ footer .another-color {
 
 @media (min-resolution: 192dpi) {
     .hero {
-        background-image: url(../images/office-mob@2x.jpg);
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/office-mob@2x.jpg);
     }
 }
 
@@ -446,7 +446,6 @@ footer .another-color {
     .hero {
         padding-top: 112px;
         padding-bottom: 112px;
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/office-tab.jpg);
         max-width: 768px;
     }
 
@@ -461,19 +460,30 @@ footer .another-color {
     }
 }
 
+@media (min-resolution: 192dpi) and (min-width: 768px) {
+    .hero {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/office-tab.jpg);
+    }
+}
 
 
 @media screen and (min-width: 1158px) {
     .hero {
         padding-top: 188px;
         padding-bottom: 188px;
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
         max-width: 1440px;
     }
 
     .hero-heading {
         margin-bottom: 48px;
     }
+}
+
+@media (min-resolution: 192dpi) and (min-width: 1158px) {
+    .hero {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+    }
+
 }
 
 /* features */
@@ -485,9 +495,9 @@ footer .another-color {
 }
 
 .features-container {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    flex-wrap: wrap; */
 }
 
 .features-heading {}
@@ -508,19 +518,18 @@ footer .another-color {
 .features-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 72px;
+
 }
 
-.features-item {}
+
 
 .features-subheading {
-    font-weight: 700;
     font-size: 36px;
     line-height: 1.12;
     letter-spacing: 0.02em;
-    text-align: center;
     color: #2e2f42;
     margin-bottom: 8px;
+    text-align: center;
 }
 
 .features-text {
@@ -535,26 +544,31 @@ footer .another-color {
     display: none;
 }
 
-@media screen and (min-width: 768px) {}
-
-.features {}
-
-.features-container {}
-
-.features-list {
-    gap: 24px;
-    flex-wrap: wrap;
+@media screen and (max-width: 767px) {
+    .features-item:not(:last-child) {
+        margin-bottom: 72px;
+    }
 }
 
-.features-item {
-    flex: calc((100% - 24px) / 2);
+
+
+@media screen and (min-width: 768px) {
+    .features-list {
+        gap: 72px 24px;
+        flex-wrap: wrap;
+    }
+
+    .features-item {
+        width: calc((100% - 24px) / 2);
+    }
+
+    .features-subheading {
+        text-align: start;
+    }
+
 }
 
-.features-subheading {
-    text-align: start;
-}
 
-.features-text {}
 
 
 @media screen and (min-width: 1158px) {
@@ -580,15 +594,14 @@ footer .another-color {
         font-weight: 500;
         font-size: 20px;
         line-height: 1.2;
-        letter-spacing: 0.02em;
-        margin-bottom: 8px;
+        /* margin-bottom: 8px; */
     }
 
     .features-text {
         font-weight: 400;
-        font-size: 16px;
+        /* font-size: 16px;
         line-height: 1.5;
-        letter-spacing: 0.02em;
+        letter-spacing: 0.02em; */
     }
 
     .features-icon-container {
@@ -608,8 +621,7 @@ footer .another-color {
 /* our team */
 
 .our-team-container {
-    margin: 0 24px;
-
+    margin: 0 auto;
 
 }
 
@@ -698,20 +710,34 @@ footer .another-color {
     ;
 }
 
+@media (min-width: 320px) and (max-width: 767px) {
+    .our-team-container {
+        max-width: 264px;
+    }
+}
+
 
 @media screen and (min-width: 768px) {
     .our-team-container {
-        margin: 0 108px;
+        margin: 0 auto;
+
     }
 
     .team-list {
         flex-direction: row;
         flex-wrap: wrap;
         gap: 24px;
+        row-gap: 64px;
     }
 
     .team-item {
         flex: calc((100% - 24px) / 2);
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1157px) {
+    .our-team-container {
+        max-width: 584px;
     }
 }
 
@@ -723,7 +749,12 @@ footer .another-color {
     }
 
     .our-team-container {
-        margin: 0 156px;
+        margin: 0 auto;
+    }
+
+    .team-list {
+        flex-direction: row;
+        /* flex-wrap: nowrap; */
     }
 
     .team-item {
@@ -812,9 +843,6 @@ footer .another-color {
 
 @media screen and (min-width: 768px) {
 
-
-
-
     .portfolio-list {
         flex-direction: row;
         flex-wrap: wrap;
@@ -824,7 +852,6 @@ footer .another-color {
 
     .portfolio-item {
         width: calc((100% - 24px) / 2);
-
     }
 
     .portfolio-item:hover {}
@@ -890,21 +917,18 @@ footer .another-color {
     background-color: #2E2F42;
     padding-top: 96px;
     padding-bottom: 96px;
+
 }
 
 .footer-logo {
-    display: flex;
-    justify-content: center;
+    display: inline-block;
     margin-bottom: 16px;
 }
 
 .footer-wrapper {
-    display: flex;
-    flex-wrap: wrap;
     padding-left: 16px;
     padding-right: 16px;
 }
-
 
 .footer-text {
     font-weight: 400;
@@ -912,22 +936,11 @@ footer .another-color {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
+    text-align: left;
+    max-width: 264px;
 }
 
-
-
-.footer-container {
-    margin-bottom: 72px;
-}
-
-
-.footer-social-container {
-    margin-bottom: 72px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-
-}
+.footer-container {}
 
 .footer-social-media-text {
     font-weight: 500;
@@ -936,12 +949,11 @@ footer .another-color {
     letter-spacing: 0.02em;
     color: #fff;
     margin-bottom: 16px;
-    text-align: center;
+
 }
 
 .footer-social-list {
     display: flex;
-    justify-content: space-between;
     gap: 16px;
 }
 
@@ -975,7 +987,7 @@ footer .another-color {
     letter-spacing: 0.02em;
     color: #fff;
     margin-bottom: 16px;
-    text-align: center;
+
 }
 
 .footer-form {}
@@ -994,12 +1006,12 @@ footer .another-color {
     height: 40px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    margin-bottom: 16px;
     opacity: 0.3;
 }
 
 .footer-form-input::placeholder {
     color: #fff;
+    padding-left: 16px;
 }
 
 .footer-form-input:hover,
@@ -1026,7 +1038,7 @@ footer .another-color {
     letter-spacing: 0.04em;
     border: none;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    margin: 0 auto;
+
 }
 
 .footer-subscribe-button:hover {
@@ -1039,237 +1051,93 @@ footer .another-color {
     margin-left: 16px;
 }
 
-
-
-
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 767px) {
     .footer-container {
-        margin-right: 24px;
+        text-align: center;
+        margin-bottom: 72px;
     }
 
+    .footer-social-container {
+        text-align: center;
+        justify-content: center;
+        margin-bottom: 72px;
+    }
+
+    .footer-subscribe-container {
+        text-align: center;
+    }
+
+    .footer-social-list {
+        justify-content: center;
+    }
+
+    .footer-subscribe-button {
+        margin: 16px auto 0 auto;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .footer-container {}
+
     .footer-logo {
-        justify-content: flex-start;
         padding: 0;
     }
 
     .footer-wrapper {
-        padding-left: 108px;
-        margin: 0;
         display: flex;
-
-        align-items: start;
-        justify-content: flex-start;
+        flex-wrap: wrap;
+        gap: 72px 24px;
     }
-
 
     .footer-text {
         max-width: 264px;
     }
 
-
-
     .footer-container {
-        min-width: 264px;
+        width: 264px;
     }
 
-
-    .footer-social-container {
-        display: flex;
-        text-align: left;
-        justify-content: start;
-        max-width: 208px;
-
-    }
+    .footer-social-container {}
 
     .footer-social-media-text {
         text-align: start;
     }
 
-    .footer-subscribe-text {
-        text-align: start;
-
-    }
+    .footer-subscribe-text {}
 
     .footer-form {
         display: flex;
-        flex-direction: row;
-        align-content: center;
         gap: 24px;
     }
 
-
+    .footer-form-input {
+        width: 264px
+    }
 }
 
-
-
-
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+    .footer-wrapper {
+        max-width: 584px;
+    }
+}
 
 @media screen and (min-width: 1158px) {
     .footer {
-        /* font-weight: 400;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #f4f4fd;
-        background-color: #2E2F42; */
         padding-top: 100px;
         padding-bottom: 100px;
-        /* display: flex; */
-        /* margin: 0; */
-
-    }
-
-    .footer-logo {
-        /* display: flex; */
-        /* justify-content: center; */
-        margin-bottom: 16px;
     }
 
     .footer-wrapper {
-        /* display: flex; */
-        /* flex-direction: row;
-        justify-content: space-between;
-        align-items: flex-start; */
-        /* flex-wrap: wrap; */
-        /* gap: 24px; */
-        /* align-items: baseline; */
-        /* margin: 0 16px; */
-        padding-left: 0;
-        display: flex;
-        justify-content: space-between;
-        /* Distribute space between the three sections */
-        align-items: flex-start;
-        /* Align items at the top */
         flex-wrap: nowrap;
-        /* Ensures the layout is responsive */
-        max-width: 1128px;
-        /* Set max width */
-        margin: 0 auto;
-        /* Center the footer-wrapper */
-        gap: 0;
-        /* Remove default gap, as you'll specify custom gaps below */
-
-
-
-    }
-
-
-
-    .footer-text {
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #f4f4fd;
+        gap: unset;
     }
 
     .footer-container {
         margin-right: 120px;
-        flex: 1;
     }
-
 
     .footer-social-container {
-        flex: 1;
-        text-align: right;
         margin-right: 80px;
-    }
-
-    .footer-social-media-text {
-        text-align: start;
-    }
-
-    .footer-social-list {
-        display: flex;
-        gap: 16px;
-    }
-
-    .footer-social-item {
-        width: 40px;
-        height: 40px;
-    }
-
-    .footer-social-link {
-        width: 100%;
-        height: 100%;
-        background-color: #4d5ae5;
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-
-    .footer-social-link:hover,
-    .footer-social-link:focus {
-        background-color: #31D0AA;
-    }
-
-    .footer-subscribe-container {
-        display: flex;
-        align-items: center;
-        max-width: 453px;
-        flex-wrap: wrap;
-        flex: 1;
-        margin: 0;
-    }
-
-    .footer-subscribe-text {
-        text-align: start;
-    }
-
-    .footer-form {
-
-        display: flex;
-        gap: 24px;
-        align-items: center;
-        flex: 1;
-    }
-
-    .footer-form-input {
-        margin: 0;
-        opacity: 1;
-        flex: 1;
-    }
-
-    .footer-form-input::placeholder {
-        color: #fff;
-    }
-
-    .footer-form-input:hover,
-    .footer-form-input:focus,
-    .footer-form-input:active {
-        border: 1px solid #4d5ae5;
-    }
-
-    .footer-subscribe-button {
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: row;
-        border-radius: 4px;
-        padding: 8px 24px;
-        min-width: 165px;
-        height: 40px;
-        color: #fff;
-        background-color: #4d5ae5;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.04em;
-        border: none;
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-
-    .footer-subscribe-button:hover {
-        background-color: #404bbf;
-    }
-
-
-    .footer-subscribe-icon {
-        fill: #fff;
-        margin-left: 16px;
     }
 }
 
@@ -1542,6 +1410,8 @@ footer .another-color {
     border: none;
     fill: #f4f4fd;
 }
+
+
 
 @media screen and (min-width: 768px) {
 
